<resources>
    <string name="app_name">Brigada online</string>
    <string name="title_activity_maps_home">Map</string>
    <string name="password">Senha</string>
    <string name="email">Email</string>
    <string name="signInText">Login</string>
    <string name="registrationText">Não tem uma conta?</string>
    <string name="registrationLink"><u>Registre-se aqui</u></string>
    <string name="signUpText">Criar conta</string>
    <string name="brigada_online_logo">Brigada Online Logo</string>
    <string name="ou">OU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_maps">Map</string>
    <string name="logout">Logout</string>
    <string name="send_location">send location</string>
    <string name="coordenadas">Coordenadas: </string>
    <string name="usu_rio_que_reportou">Usuário que reportou: </string>
    <string name="data_de_detec_o">Data de detecção: </string>
</resources>
